--- a/index.html
+++ b/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>My first website</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Get modern, high quality jackets for all weather conditions from Rainy Days"
+    />
+    <title>Rainy Days | Home</title>
+    <script
+      src="https://kit.fontawesome.com/36dc22a110.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="styles/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+    <header>
+      <a href="index.html">
+        <img src="images/rainy-days-logo.png" class="logo" />
+      </a>
+      <div>
+        <a href="#">Free Delivery Over 100$</a>
+        <img src="images/delivery-icon.png" alt="Free Delivery" />
+        <a href="yourcart.html">Your Cart</a>
+        <img src="images/cart-icon.png" alt="Your Cart" />
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="men.html">Mens Jackets</a></li>
+          <li><a href="women.html">Womens Jackets</a></li>
+          <li>
+            <div>
+              <form>
+                <label for="search"></label>
+                <input type="text" id="search" />
+              </form>
+              <img src="images/search-icon.png" alt="Search" />
+            </div>
+          </li>
+          <li><a href="#">Sign In | Sign Up</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="homepage-slogan">
+        <h1>Find a Perfect Fit for Your Next Adventure!</h1>
+      </div>
+    </header>
+    <main>
+      <div class="homepage-background"><img /></div>
+    </main>
+    <footer>
+      <div>
+        <h2>Contact Us</h2>
+        <ul>
+          <li><a href="#">rainydays@rainydays.no</a></li>
+          <li><a href="#">+4780000000</a></li>
+          <li><a href="#">Bergliveien 136, 1212 Oslo, Norway</a></li>
+        </ul>
+      </div>
+      <div>
+        <h2>Payment Options</h2>
+        <ul>
+          <li><i class="fab fa-cc-visa"></i></li>
+          <li><i class="fab fa-cc-paypal"></i></li>
+          <li><i class="fab fa-cc-mastercard"></i></li>
+          <li><i class="fab fa-cc-amex"></i></li>
+        </ul>
+      </div>
+      <div>
+        <h2>Follow Us</h2>
+        <ul>
+          <li>
+            <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-instagram"></i>Instagram</a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-twitter"></i>Tweeter</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
