--- a/index.html
+++ b/index.html
@@ -4,85 +4,120 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Get modern, high quality jackets for all weather conditions from Rainy Days"
-    />
-    <title>Rainy Days | Home</title>
     <script
       src="https://kit.fontawesome.com/36dc22a110.js"
       crossorigin="anonymous"
     ></script>
-    <link href="styles/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Rainy days</title>
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img src="images/rainy-days-logo.png" class="logo" />
-      </a>
-      <div>
-        <a href="#">Free Delivery Over 100$</a>
-        <img src="images/delivery-icon.png" alt="Free Delivery" />
-        <a href="yourcart.html">Your Cart</a>
-        <img src="images/cart-icon.png" alt="Your Cart" />
-      </div>
+      <div class="header">
+        <div class="logo-section">
+          <img
+            src="images/rainy-days-logo.png"
+            alt="Rainy Days Logo"
+            class="logo"
+          />
+          <div class="order-options">
+            <p>Free delivery over 100$</p>
+            <img
+              src="images/delivery-icon.png"
+              alt="Delivery Icon"
+              class="delivery-icon"
+            />
+            <p>Your cart</p>
+            <img src="images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
+          </div>
+        </div>
+        <div class="navigation">
+          <div class="shop-section">
+            <a href="#">Men</a>
+            <a href="#">Women</a>
+            <a href="#">Outlet</a>
+          </div>
+          <div class="search-section">
+            <input type="text" placeholder="Search.." />
+            <img
+              src="images/search-icon.png"
+              alt="Search Icon"
+              class="search-icon"
+            />
+          </div>
+          <div class="information-section">
+            <a href="#">SIGN IN | SIGN UP</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <label for="hamburger-menu" class="hamburger-menu-label">
+          <li class="fas fa-bars"></li>
+        </label>
+        <input type="checkbox" id="hamburger-menu" />
 
-      <nav>
-        <ul>
-          <li><a href="men.html">Mens Jackets</a></li>
-          <li><a href="women.html">Womens Jackets</a></li>
-          <li>
-            <div>
-              <form>
-                <label for="search"></label>
-                <input type="text" id="search" />
-              </form>
-              <img src="images/search-icon.png" alt="Search" />
-            </div>
-          </li>
-          <li><a href="#">Sign In | Sign Up</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
-      <div class="homepage-slogan">
-        <h1>Find a Perfect Fit for Your Next Adventure!</h1>
+        <div class="navigation-mobile">
+          <div class="shop-section">
+            <a href="#">Men</a>
+            <a href="#">Women</a>
+            <a href="#">Outlet</a>
+          </div>
+          <div class="search-section">
+            <input type="text" placeholder="Search.." />
+            <img
+              src="images/search-icon.png"
+              alt="Search Icon"
+              class="search-icon"
+            />
+          </div>
+          <div class="information-section">
+            <a href="#">SIGN IN | SIGN UP</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <div class="info-section">
+          <h3>Find a perfect fit for your next adventure!</h3>
+        </div>
       </div>
     </header>
     <main>
-      <div class="homepage-background"><img /></div>
+      <div class="main-content">
+        <img
+          src="images/jackets-homepage.jpg"
+          alt="Homepage Background Image"
+          class="background-image"
+        />
+      </div>
     </main>
     <footer>
-      <div>
-        <h2>Contact Us</h2>
-        <ul>
-          <li><a href="#">rainydays@rainydays.no</a></li>
-          <li><a href="#">+4780000000</a></li>
-          <li><a href="#">Bergliveien 136, 1212 Oslo, Norway</a></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Payment Options</h2>
-        <ul>
-          <li><i class="fab fa-cc-visa"></i></li>
-          <li><i class="fab fa-cc-paypal"></i></li>
-          <li><i class="fab fa-cc-mastercard"></i></li>
-          <li><i class="fab fa-cc-amex"></i></li>
-        </ul>
-      </div>
-      <div>
-        <h2>Follow Us</h2>
-        <ul>
-          <li>
-            <a href=""><i class="fab fa-facebook-f"></i>Facebook</a>
-          </li>
-          <li>
-            <a href=""><i class="fab fa-instagram"></i>Instagram</a>
-          </li>
-          <li>
-            <a href=""><i class="fab fa-twitter"></i>Tweeter</a>
-          </li>
-        </ul>
+      <div class="footer">
+        <div class="contact">
+          <p class="contact-header">Contact us</p>
+          <div class="contact-us">
+            <a href="#">rainydays@rainydays.no</a>
+            <a href="#">+4780000000</a>
+            <a href="#">Bergliveien 136, 1212 Oslo, Norway</a>
+          </div>
+        </div>
+        <div class="payment">
+          <p>Payment options</p>
+          <div class="payment-options">
+            <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-paypal"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-amex"></i>
+          </div>
+        </div>
+        <div class="follow">
+          <p>Follow us</p>
+          <div class="follow-us">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-tiktok"></i>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
