--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <div class="header">
+      <div>
         <div class="logo-section">
           <img
             src="images/rainy-days-logo.png"
@@ -55,7 +55,6 @@
           <li class="fas fa-bars"></li>
         </label>
         <input type="checkbox" id="hamburger-menu" />
-
         <div class="navigation-mobile">
           <div class="shop-section">
             <a href="#">Men</a>
