CSS updated/ new folders and html pages
Updated CSS, new folders and html pages, updated images folder

--- a/men.html
+++ b/men.html
@@ -4,7 +4,181 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="View available jackets for men from Rainy Days"
+    />
+    <script
+      src="https://kit.fontawesome.com/36dc22a110.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Rainy days | Men</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <div class="logo-section">
+          <a href="/index.html"
+            ><img
+              src="images/rainy-days-logo.png"
+              alt="Rainy Days Logo"
+              class="logo"
+          /></a>
+          <div class="order-options">
+            <p>Free delivery over 100$</p>
+            <img
+              src="images/delivery-icon.png"
+              alt="Delivery Icon"
+              class="delivery-icon"
+            />
+            <p>Your cart</p>
+            <img src="images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
+          </div>
+        </div>
+        <div class="navigation">
+          <div class="shop-section">
+            <a href="men.html">Men</a>
+            <a href="women.html">Women</a>
+            <a href="outlet.html">Outlet</a>
+          </div>
+          <div class="search-section">
+            <input type="text" placeholder="Search.." />
+            <img
+              src="images/search-icon.png"
+              alt="Search Icon"
+              class="search-icon"
+            />
+          </div>
+          <div class="information-section">
+            <a href="#">SIGN IN | SIGN UP</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+        <label for="hamburger-menu" class="hamburger-menu-label">
+          <li class="fas fa-bars"></li>
+        </label>
+        <input type="checkbox" id="hamburger-menu" />
+        <div class="navigation-mobile">
+          <div class="shop-section">
+            <a href="men.html">Men</a>
+            <a href="women.html">Women</a>
+            <a href="outlet.html">Outlet</a>
+          </div>
+          <div class="search-section">
+            <input type="text" placeholder="Search.." />
+            <img
+              src="images/search-icon.png"
+              alt="Search Icon"
+              class="search-icon"
+            />
+          </div>
+          <div class="information-section">
+            <a href="#">SIGN IN | SIGN UP</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+          </div>
+    </header>
+    <main>
+      <h1>Mens' Jackets</h1>
+      <section class="main-content-shop">
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/red-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/military-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/orange-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/brown-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/yellow-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/black-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+          <p>$121</p>
+          <p>Color: Red</p>
+          <p>Suitable for: rain, wind</p>
+        </div>
+        </div>
+        <section class="pushing-the-comfort-zone">
+          <h2>Pushing the comfort zone</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad, voluptatibus autem illum, alias dolorum 
+            nesciunt modi facilis debitis corrupti ea accusantium quibusdam assumenda expedita, animi sed nulla hic deserunt.</p>
+        </section>
+      </section>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="contact">
+          <p class="contact-header">Contact us</p>
+          <div class="contact-us">
+            <a href="#">rainydays@rainydays.no</a>
+            <a href="#">+4780000000</a>
+            <a href="#">Bergliveien 136, 1212 Oslo, Norway</a>
+          </div>
+        </div>
+        <div class="payment">
+          <p>Payment options</p>
+          <div class="payment-options">
+            <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-paypal"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-cc-amex"></i>
+          </div>
+        </div>
+        <div class="follow">
+          <p>Follow us</p>
+          <div class="follow-us">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-tiktok"></i>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
