--- a/products/red-men.html
+++ b/products/red-men.html
@@ -6,46 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="View available jackets for women from Rainy Days"
+      content="View red jacket for men from Rainy Days"
     />
     <script
       src="https://kit.fontawesome.com/36dc22a110.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Rainy days | Women</title>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <title>Rainy days | Red jacket for men</title>
   </head>
   <body>
     <header>
       <div>
         <div class="logo-section">
-          <a href="/index.html"
-            ><img
-              src="images/rainy-days-logo.png"
-              alt="Rainy Days Logo"
-              class="logo"
-          /></a>
+          <a href="../index.html"
+          ><img
+            src="../images/rainy-days-logo.png"
+            alt="Rainy Days Logo"
+            class="logo"
+        /></a>
           <div class="order-options">
             <p>Free delivery over 100$</p>
-            <img
-              src="images/delivery-icon.png"
-              alt="Delivery Icon"
-              class="delivery-icon"
-            />
+            <img src="../images/delivery-icon.png" alt="Delivery Icon" class="delivery-icon" />
             <p>Your cart</p>
-            <img src="images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
+            <img src="../images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
           </div>
         </div>
         <div class="navigation">
           <div class="shop-section">
-            <a href="men.html">Men</a>
-            <a href="women.html">Women</a>
-            <a href="outlet.html">Outlet</a>
+            <a href="../men.html">Men</a>
+            <a href="../women.html">Women</a>
+            <a href="../outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
             <img
-              src="images/search-icon.png"
+              src="../images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
@@ -62,14 +58,14 @@
         <input type="checkbox" id="hamburger-menu" />
         <div class="navigation-mobile">
           <div class="shop-section">
-            <a href="men.html">Men</a>
-            <a href="women.html">Women</a>
-            <a href="outlet.html">Outlet</a>
+            <a href="../men.html">Men</a>
+            <a href="../women.html">Women</a>
+            <a href="../outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
             <img
-              src="images/search-icon.png"
+              src="../images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
@@ -81,75 +77,81 @@
           </div>
     </header>
     <main>
-      <section class="main-content-header"> <!--Why is styling not coming through when I use this class????-->
-      <h1>Womens' Jackets</h1>
+      <h1>Mens' Jackets</h1>
+      <section class="main-content-product">
+        <div  class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/red-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/military-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/orange-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/brown-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/yellow-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+        <div class="product">
+          <a href="/products/red-men.html">
+          <img src="/images/black-man.jpg" alt="Red Jacket for Men"/>
+        </a>
+        <div>
+            <p>$121</p>
+            <p>Color: Red</p>
+            <p>Suitable for: rain, wind</p>
+          </div>
+        </div>
+      </section>
+      <section class="product-info">
+        <h3>About this jacket</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad, voluptatibus autem illum, alias dolorum 
+          nesciunt modi facilis debitis corrupti ea accusantium quibusdam assumenda expedita, animi sed nulla hic deserunt.</p>
+        <h3>Customer reviews</h3>
+        <a href="#">Read reviews</a>
+        <section>
+          <img src="/images/red-man.jpg"/>
+          <p>Choose your size S M L XL</p>
+          <a class="cta-add-to-cart" href="#">Add to Cart</a>
+      </section>
     </section>
-      <section class="main-content-shop">
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/orange-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div>
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/black-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div>
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/brown-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div >
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/yellow-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div>
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/white-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div>
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <div class="product">
-          <a href="/products/orange-women.html">
-          <img src="/images/red-woman.jpg" alt="Red Jacket for Men"/>
-        </a>
-        <div>
-          <p>$121</p>
-          <p>Color: Red</p>
-          <p>Suitable for: rain, wind</p>
-        </div>
-        </div>
-        <section class="pushing-the-comfort-zone">
-          <h2>Pushing the comfort zone</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ad, voluptatibus autem illum, alias dolorum 
-            nesciunt modi facilis debitis corrupti ea accusantium quibusdam assumenda expedita, animi sed nulla hic deserunt.</p>
-        </section>
       </section>
     </main>
     <footer>
