--- a/index.html
+++ b/index.html
@@ -9,46 +9,182 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
-    <title>Rainy days</title>
+    <title>Rainy days | Home</title>
   </head>
   <body>
     <header>
       <div>
         <div class="logo-section">
-          <img
-            src="images/rainy-days-logo.png"
-            alt="Rainy Days Logo"
-            class="logo"
-          />
+          <a href="index.html">
+            <img
+              src="./images/rainy-days-logo.png"
+              alt="Rainy Days Logo"
+              class="logo"
+            />
+          </a>
           <div class="order-options">
             <p>Free delivery over 100$</p>
             <img
-              src="images/delivery-icon.png"
+              src="./images/delivery-icon.png"
               alt="Delivery Icon"
               class="delivery-icon"
             />
-            <p>Your cart</p>
-            <img src="images/cart-icon.png" alt="Cart Icon" class="cart-icon" />
+            <div class="your-cart">
+              <p>Your cart</p>
+              <img
+                src="./images/cart-icon.png"
+                alt="Cart Icon"
+                class="cart-icon"
+              />
+              <label class="hidden checkbox-trigger" for="yourcart1"></label>
+              <input
+                class="hidden checkbox-trigger"
+                type="checkbox"
+                id="yourcart1"
+              />
+              <div class="overlay cart-overlay">
+                <a href="index.html">
+                  <div class="overlay-inside cart">
+                    <h2>Your Cart</h2>
+                    <ul>
+                      <li>
+                        <span class="cart-img">
+                          <img
+                            src="./images/red-man.jpg"
+                            alt="Red Jacket for Men"
+                          />
+                        </span>
+                        <span>x1</span>
+                        <span>98 $</span>
+                      </li>
+                      <li>
+                        <span class="cart-img">
+                          <img
+                            src="./images/red-man.jpg"
+                            alt="Red Jacket for Men"
+                          />
+                        </span>
+                        <span>x1</span>
+                        <span>98 $</span>
+                      </li>
+                      <li class="total">
+                        <span>Total</span>
+                        <span>228 $</span>
+                      </li>
+                    </ul>
+                    <cta class="cta cta-red" type="cta"> Check Out </cta>
+                    <label class="hidden checkbox-trigger" for="order3"></label>
+                    <input
+                      class="hidden checkbox-trigger"
+                      type="checkbox"
+                      id="order3"
+                    />
+                    <div class="overlay order-popup">
+                      <div
+                        class="has-background"
+                        style="
+                          background-image: url('./images/jackets-homepage.jpg');
+                        "
+                      >
+                        <div class="order-popup-text">
+                          <p>Thank you for your order.</p>
+                          <p>We have sent order confirmation to your email.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="navigation">
           <div class="shop-section">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Outlet</a>
+            <a href="./men.html">Men</a>
+            <a href="./women.html">Women</a>
+            <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
             <img
-              src="images/search-icon.png"
+              src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
+            <a href="index.html"
+              >About Us
+              <div class="about-trigger">
+                <label class="hidden checkbox-trigger" for="addtocart1"></label>
+                <input
+                  class="hidden checkbox-trigger"
+                  type="checkbox"
+                  id="addtocart1"
+                />
+                <div class="overlay about-overlay">
+                  <div class="overlay-inside about">
+                    <h2>About Us</h2>
+                    <h3>How did we start?</h3>
+                    <img src="./images/man-sewing.jpg" alt="about us image" />
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam odio nulla laudantium pariatur consequatur
+                      necessitatibus, expedita ratione, aliquam fugiat mollitia
+                      modi! Velit nisi animi inventore recusandae laboriosam
+                      exercitationem vel facilis?
+                    </p>
+                    <h3>What is our goal?</h3>
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Officiis eveniet, dolorem maxime esse error laborum
+                      temporibus obcaecati hic delectus a, tempore reiciendis
+                      earum quae repellendus quaerat similique quod, ea fugiat!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="index.html"
+              >Contact
+              <div class="about-trigger">
+                <label class="hidden checkbox-trigger" for="addtocart1"></label>
+                <input
+                  class="hidden checkbox-trigger"
+                  type="checkbox"
+                  id="addtocart1"
+                />
+                <div class="overlay contact-overlay">
+                  <div class="overlay-inside contact">
+                    <h2>Contact Us</h2>
+                    <ul>
+                      <li>
+                        <span class="icon-img"
+                          ><img src="./images/email-icon.png" alt=""
+                        /></span>
+                        <span>rainydays@rainydays.no</span>
+                      </li>
+                      <li>
+                        <span class="icon-img"
+                          ><img src="./images/phone-icon.png" alt=""
+                        /></span>
+                        <span>+4780000000</span>
+                      </li>
+                      <li>
+                        <span class="icon-img"
+                          ><img src="./images/location-icon.png" alt=""
+                        /></span>
+                        <span>Bergliveien 136, 1212 Oslo, Norway</span>
+                      </li>
+                    </ul>
+                    <div class="map">
+                      <img src="./images/map.jpg" alt="map" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
         <label for="hamburger-menu" class="hamburger-menu-label">
@@ -64,7 +200,7 @@
           <div class="search-section">
             <input type="text" placeholder="Search.." />
             <img
-              src="images/search-icon.png"
+              src="./images/search-icon.png"
               alt="Search Icon"
               class="search-icon"
             />
@@ -83,7 +219,7 @@
     <main>
       <div class="main-content">
         <img
-          src="images/jackets-homepage.jpg"
+          src="./images/jackets-homepage.jpg"
           alt="Homepage Background Image"
           class="background-image"
         />
