HTML/ CSS updates
Updated HTML/ CSS, deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       type="checkbox"
                       id="order3"
                     />
-                    <div class="overlay order-popup">
+                    <div class="popup order-popup">
                       <div
                         class="has-background"
                         style="
@@ -116,7 +116,7 @@
             <a href="#">SIGN IN | SIGN UP</a>
             <a href="index.html"
               >About Us
-              <div class="about-trigger">
+              <div class="overlay-trigger">
                 <label class="hidden checkbox-trigger" for="addtocart1"></label>
                 <input
                   class="hidden checkbox-trigger"
@@ -148,7 +148,7 @@
             </a>
             <a href="index.html"
               >Contact
-              <div class="about-trigger">
+              <div class="overlay-trigger">
                 <label class="hidden checkbox-trigger" for="addtocart1"></label>
                 <input
                   class="hidden checkbox-trigger"
@@ -193,9 +193,9 @@
         <input type="checkbox" id="hamburger-menu" />
         <div class="navigation-mobile">
           <div class="shop-section">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Outlet</a>
+            <a href="men.html">Men</a>
+            <a href="women.html">Women</a>
+            <a href="outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
