--- a/women.html
+++ b/women.html
@@ -62,10 +62,10 @@
                         <span>228 $</span>
                       </li>
                     </ul>
-                    <cta class="cta cta-red" type="cta">Check Out</cta>
+                    <button class="cta cta-red" type="cta">Check Out</button>
                     <label class="hidden checkbox-trigger" for="order3"></label>
                     <input class="hidden checkbox-trigger" type="checkbox" id="order3">
-                    <div class="overlay order-popup">
+                    <div class="popup order-popup">
                       <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                         <div class="order-popup-text">
                           <p>Thank you for your order.</p>
@@ -96,7 +96,7 @@
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
             <a href="./women.html">About Us
-            <div class="about-trigger">
+            <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay about-overlay">
@@ -112,7 +112,7 @@
             </div>
           </a>
             <a href="./women.html">Contact
-            <div class="about-trigger">
+            <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay contact-overlay">
@@ -147,9 +147,9 @@
         <input type="checkbox" id="hamburger-menu" />
         <div class="navigation-mobile">
           <div class="shop-section">
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Outlet</a>
+            <a href="men.html">Men</a>
+            <a href="women.html">Women</a>
+            <a href="outlet.html">Outlet</a>
           </div>
           <div class="search-section">
             <input type="text" placeholder="Search.." />
@@ -195,11 +195,11 @@
                       <h3>Customers reviews</h3>
                       <div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -212,8 +212,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart1"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
                       <div class="overlay cart-overlay">
@@ -239,10 +239,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order1"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order1">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
@@ -278,8 +278,8 @@
                       <h3>Customers reviews</h3>
                       <div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -292,8 +292,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart2"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart2">
                       <div class="overlay cart-overlay">
@@ -319,10 +319,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order2"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order2">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
@@ -358,9 +358,9 @@
                       <h3>Customers reviews</h3>
                       <div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -373,8 +373,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart3"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart3">
                       <div class="overlay cart-overlay">
@@ -400,10 +400,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order3"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order3">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
@@ -438,11 +438,11 @@
                     <div class="product-review">
                       <h3>Customers reviews</h3><div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -455,8 +455,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart4"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart4">
                       <div class="overlay cart-overlay">
@@ -482,10 +482,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order4"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order4">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
@@ -521,10 +521,10 @@
                       <h3>Customers reviews</h3>
                       <div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -537,8 +537,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart5"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart5">
                       <div class="overlay cart-overlay">
@@ -564,10 +564,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order5"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order5">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
@@ -603,11 +603,11 @@
                       <h3>Customers reviews</h3>
                       <div class="stars">
                         <ul>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
-                          <li><img src="./images/star.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
+                          <li><img src="./images/star-icon.png" alt="star icon"</li>
                         </ul>
                       </div>
                       <a href="">Read reviews >></a>
@@ -620,8 +620,8 @@
                       <p>Choose your size:</p>
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
-                    <div class="product-checkout-cta">
-                      <cta class="cta" type="text">Add to Cart</cta>
+                    <div class="product-checkout-button">
+                      <button class="cta" type="text">Add to Cart</button>
                       <label class="hidden checkbox-trigger" for="addtocart6"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart6">
                       <div class="overlay cart-overlay">
@@ -647,10 +647,10 @@
                               <span>228 $</span>
                             </li>
                           </ul>
-                          <cta class="cta cta-red" type="cta">Check Out</cta>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order6"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order6">
-                          <div class="overlay order-popup">
+                          <div class="popup order-popup">
                             <div class="has-background" style="background-image:url('./images/jackets-homepage.jpg');">
                               <div class="order-popup-text">
                                 <p>Thank you for your order.</p>
