--- a/outlet.html
+++ b/outlet.html
@@ -424,7 +424,7 @@
             <section class="sign-up-section">
               <p>Looking for more good deals?</p>
               <p>Sign up to our newsletter!</p>
-              <cta class="cta cta-red" type="cta">Sign Up</cta>
+              <button class="cta cta-red" type="cta">Sign Up</button>
             </section>
           </div>
           <section class="pushing-the-comfort-zone">
