HTML/CSS updates
Final HTML/CSS updates

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <span>228 $</span>
                       </li>
                     </ul>
-                    <cta class="cta cta-red" type="cta"> Check Out </cta>
+                    <button class="cta cta-red" type="cta">Check Out</button>
                     <label class="hidden checkbox-trigger" for="order3"></label>
                     <input
                       class="hidden checkbox-trigger"
