--- a/outlet.html
+++ b/outlet.html
@@ -344,7 +344,7 @@
                 <label class="hidden checkbox-trigger" for="item6">item6</label>
                 <input class="hidden checkbox-trigger" type="checkbox" id="item6">
                 <img src="./images/white-outlet.jpg" alt="Black Jacket for Men"/>
-                <div>
+                <div class="underphoto-info">
                   <p>$121</p>
                   <p>Color: Red</p>
                   <p>Suitable for: rain, wind</p>
