--- a/women.html
+++ b/women.html
@@ -14,6 +14,17 @@
     ></script>
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Rainy days | Women</title>
+    <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:2718397,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </head>
   <body>
     <header>
