--- a/women.html
+++ b/women.html
@@ -217,7 +217,7 @@
                     </div>
                   </div>
                   <div class="product-image">
-                  <img src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
+                 <img class="details-image" src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
                   <div class="product-checkout">
                     <div class="sizes">
                       <p>Choose your size:</p>
