--- a/index.html
+++ b/index.html
@@ -206,7 +206,11 @@
         <label for="hamburger-menu" class="hamburger-menu-label">
           <li class="fas fa-bars"></li>
         </label>
-        <input type="checkbox" id="hamburger-menu" />
+        <input
+          type="checkbox"
+          id="hamburger-menu"
+          onclick="handleHamburgerMenuButton()"
+        />
         <div class="navigation-mobile">
           <div class="shop-section">
             <a href="men.html">Men</a>
@@ -271,5 +275,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/script.js"></script>
   </body>
 </html>
