--- a/about.html
+++ b/about.html
@@ -91,19 +91,19 @@
                     </ul>
                     <!-- Modal -->
                     <button id="check-out-button">Open Modal</button>
-
                     <div id="check-out-modal" class="check-out-modal-main">
                       <div class="check-out-modal-content">
                         <div class="check-out-modal-header">
                           <span class="check-out-modal-close">&times;</span>
+                          <h2>Modal Header</h2>
                         </div>
                         <div class="check-out-modal-modal-body">
-                          <p>
-                            Thank you for your purchase! We will send you an
-                            email with confirmation shortly!
-                          </p>
+                          <p>Some text in the Modal Body</p>
+                          <p>Some other text...</p>
                         </div>
-                        <div class="check-out-modal-footer"></div>
+                        <div class="check-out-modal-footer">
+                          <h3>Modal Footer</h3>
+                        </div>
                       </div>
                     </div>
                     <label class="hidden checkbox-trigger" for="order3"></label>
@@ -148,6 +148,7 @@
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
             <a href="about.html">About Us</a>
+            <!---->
             <a href="contact.html">Contact</a>
           </div>
         </div>
@@ -186,11 +187,22 @@
     </header>
     <main>
       <div class="main-content">
-        <img
-          src="./images/jackets-homepage.jpg"
-          alt="Homepage Background Image"
-          class="background-image"
-        />
+        <h2>About Us</h2>
+        <h3>How did we start?</h3>
+        <img src="./images/man-sewing.jpg" alt="about us image" />
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam odio
+          nulla laudantium pariatur consequatur necessitatibus, expedita
+          ratione, aliquam fugiat mollitia modi! Velit nisi animi inventore
+          recusandae laboriosam exercitationem vel facilis?
+        </p>
+        <h3>What is our goal?</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis
+          eveniet, dolorem maxime esse error laborum temporibus obcaecati hic
+          delectus a, tempore reiciendis earum quae repellendus quaerat
+          similique quod, ea fugiat!
+        </p>
       </div>
     </main>
     <footer>
